--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     </headd>
     <body>
         <h1>Matthew Gonzalez</h1>
-        <div class="about"><h2>About me</h2></div>
-        <div class="skills"><h2>Skills</h2></div>
-        <div class="projects"><h2>Highlighted projects</h2></div>
-        <div class="contact"><h2>Contact me</h2></div>
+
+        <div class ="about"><h2>About me</h2></div>
+        <div class ="skills"><h2>Skills</h2></div>
+        <div class ="projects"><h2>Hightlighed Projects</h2></div>
+        <div class="contact"><h2>Contact Me</h2></div>
         
     </body>
 </html>
