--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
     <headd>
         <title>CSCE190: Matthew Gonzelez</title>
+        <link rel="stylesheet" href="styles.css">
     </headd>
     <body>
         <h1>Matthew Gonzalez</h1>
@@ -10,6 +11,6 @@
         <div class ="skills"><h2>Skills</h2></div>
         <div class ="projects"><h2>Hightlighed Projects</h2></div>
         <div class="contact"><h2>Contact Me</h2></div>
-        
+
     </body>
 </html>
