Catching Up Part 2:
Added Problem Statment into website

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
         <h1>Matthew Gonzalez</h1>
 
         <div class ="about"><h2>About me</h2></div>
+
         <div class ="skills"><h2>Skills</h2></div>
-        <div class ="projects"><h2>Hightlighed Projects</h2></div>
+
+        <div class ="projects"><h2>Hightlighed Projects</h2>
+            <!-- Problem Statment Assignment-->
+             <section class="project">
+                <a href="files/CSCE190ProblemStatement.pdf"><h3>Problem Statment</h3></a>
+                <a href="files/CSCE190ProblemStatement.pdf"><img src="images/CSCE190ProblemStatement.png"></a>
+                <p>Students struggle to find a tutor that fits their needs.</p>
+             </section>
+
+        </div>
+
         <div class="contact"><h2>Contact Me</h2></div>
 
     </body>
