--- a/index.html
+++ b/index.html
@@ -8,20 +8,70 @@
         <h1>Matthew Gonzalez</h1>
 
         <div class ="about"><h2>About me</h2></div>
-
+            <p>Hello! Welcome to my personal website. My name is Matthew Gonzalez, a junior computer engineering student at UofSC.
+                I am dedicated to learning more, and improving the skills I learn throughout my degree and beyond.
+            </p>
+            <br/>
+            <a href="documents.CGonzalezResume.pdf">
+                Check out my resume for more information!
+            </a>
         <div class ="skills"><h2>Skills</h2></div>
+            <p>
+                <b>
+                    Programming Languages:
+                </b>
+                Java
+            </p>
+            <p>
+                <b>
+                    Additional Skills:
+                </b>
+                Collaboration, Adobe Photoshop, Video Editing
+            </p>
 
         <div class ="projects"><h2>Hightlighed Projects</h2>
             <!-- Problem Statment Assignment-->
              <section class="project">
-                <a href="files/CSCE190ProblemStatement.pdf"><h3>Problem Statment</h3></a>
-                <a href="files/CSCE190ProblemStatement.pdf"><img src="images/CSCE190ProblemStatement.png"></a>
-                <p>Students struggle to find a tutor that fits their needs.</p>
-             </section>
+                <a href="files/CSCE190ProblemStatement.pdf">
+                    <h3>Problem Statment</h3>
+                </a>
+                <a href="files/CSCE190ProblemStatement.pdf">
+                    <img src="images/CSCE190ProblemStatement.png">
+                </a>
+                <p>Students struggle to find a tutor that fits their needs.
 
+                </p>
+             </section>
+             <!-- Afinity Diagram Assignment-->
+             <section class="project">
+                <a href="files/AffinityDiagram.JPG">
+                    <h3>Affinity Diagram</h3>
+                </a>
+                <a>
+                    <img src="images/AffinityDiagram.png">
+                </a>
+                <p>
+                    Our group worked together to brainstorm issues, ideas, and implementation methods for our app.
+                </p>
+             </section>
+             <section class="project">
+                <a href="https://youtu.be/cjhXU-svV4w">
+                    <img src="images/PaperPrototype.png">
+                    <h3>Paper Prototype</h3>
+                </a>
+                <p>
+                    Our group made a mock up of how our app would work and function when a person uses it.
+                </p>
+             </section>
         </div>
 
-        <div class="contact"><h2>Contact Me</h2></div>
-
+        <div class="contact"><h2>Contact Me:</h2>
+            <a href="www.linkedin.com/in/matthew-gonzalez-607b3b290">
+                <p>LinkedIn: Matthew Gonzalez</p>
+            </a>
+            <a href="cmg16@email.sc.edu">
+                <p>Email: cmg16@email.sc.edu</p>
+            </a>
+        </div>
     </body>
 </html>
