--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 I am dedicated to learning more, and improving the skills I learn throughout my degree and beyond.
             </p>
             <br/>
-            <a href="documents.CGonzalezResume.pdf">
+            <a href="files/CGonzalezResume.pdf">
                 Check out my resume for more information!
             </a>
         <div class ="skills"><h2>Skills</h2></div>
